# barcoded-Pf2

./: .gitignore  figure2.py  makefile  pyproject.toml  run.ipynb  stats.ipynb
.github/workflows/: test.yml
pf2barcode/: PythonDataToScoresFunction.py  analysis.py  countMatrixjoin.py  geneontology.py  imports.py  matrix_utils.py  nmf.py  nnls.py  plot.py  watermelondatajoin.py
pf2barcode/data/: T1_HCT116_SW.txt  T1_MDAMB231_SW.txt  T2_HCT116_SW.txt  T2_MDAMB231_SW.txt
pf2barcode/figures/: analysis.py  common.py  figure1.py  figure2.py  figure3.py  figure4.py  figure5.py  figure6.py  figurepca.py
pf2barcode/tests/: test_import.py
quarto/: _quarto.yml  analysis.qmd  proposal.qmd
