[tool.poetry]
name = "pf2barcode"
version = "0.1.0"
description = "Single cell analysis across conditions using PARAFAC2."
authors = ["Andrew Ramirez", "Aaron Meyer <git@asmlab.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26"
scipy = "^1.12"
scikit-learn = "^1.4"
seaborn = "^0.13.2"
pandas = "^2.2.1"
h5netcdf = "^1.3"
anndata = "^0.10.3"
gseapy = "^1.1"
scanpy = "^1.10"
tqdm = "^4.66.1"
dask = {extras = ["dataframe"], version = "^2024.3.1"}
ipykernel = "^6.29.4"
igraph = "^0.11.5"
louvain = "^0.8.2"
setuptools = "^70.0.0"
pytest = "^8.2.0"
ipywidgets = "^8.1.3"
fastcluster = "^1.2.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]                                                           
fbuild = "pf2barcode.figures.common:genFigure"
factor = "pf2barcode.imports:factorSave"