[project]
name = "pf2barcode"
version = "0.1.0"
description = "Single cell analysis across conditions using PARAFAC2."
authors = [
    { name = "Aaron Meyer", email = "git@asmlab.org" }
]
license = { text = "MIT" }
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "scikit-learn>=1.5",
    "seaborn>=0.13",
    "pandas>=2.2",
    "gseapy>=1.1",
    "scanpy>=1.10",
    "dask[dataframe]>=2024.3.1",
    "ipykernel>=6.29.4",
    "setuptools>=74.0.0",
    "ipywidgets>=8.1.3",
    "anndata>=0.11.4",
    "hdf5plugin>=5.1.0",
    "glmpca>=0.1.0",
]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0",
]

readme = "README.md"

[project.scripts]
fbuild = "pf2barcode.figures.common:genFigure"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pf2barcode"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # Unused arguments
    "ARG",
]
