[project]
name = "pf2barcode"
version = "0.1.0"
description = "Single cell analysis across conditions using PARAFAC2."
authors = [
    { name = "Aaron Meyer", email = "git@asmlab.org" }
]
license = { text = "MIT" }
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=2.2",
    "scipy==1.15.3",
    "scikit-learn>=1.7",
    "seaborn>=0.13",
    "pandas>=2.3",
    "gseapy>=1.1",
    "scanpy>=1.11.2",
    "ipykernel>=6.29",
    "anndata>=0.11.4",
]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0",
]

readme = "README.md"

[project.scripts]
fbuild = "pf2barcode.figures.common:genFigure"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pf2barcode"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # Unused arguments
    "ARG",
]
